# fitgirl-ecoqos

./: Cargo.toml  README.md
.github/workflows/: build.yaml
fitgirl-ecoqos/: Cargo.toml  build.rs
fitgirl-ecoqos/src/: config.rs  lib.rs  main.rs
listen-new-proc/: Cargo.toml
listen-new-proc/src/: lib.rs  listen.rs
src/: config.rs  listen.rs  main.rs  throttle.rs
win32-ecoqos/: Cargo.toml  README.md
win32-ecoqos/benches/: bench.rs
win32-ecoqos/examples/: list_process.rs  retrieve_thread.rs
win32-ecoqos/src/: lib.rs  preset.rs  process.rs  thread.rs  utils.rs
win32-ecoqos/src/utils/: mod.rs  process.rs  thread.rs  wmi.rs
win32-ecoqos/tests/: find_thread.rs  list_process.rs  process_toggle.rs  thread_toggle.rs
