[package]
name = "fitgirl-ecoqos"
version = "0.1.0"
edition = "2024"
authors = ["mokurin000"]

[dependencies]
ahash = "0.8.11"
directories = "6.0.0"
futures-lite = "2.6.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "ansi",
    "env-filter",
    "fmt",
    "local-time",
], default-features = false }
windows = { version = "0.61.1", features = ["Win32_System_Threading"] }
windows-result = "0.3.2"
windows-version = "0.1.4"
wmi = "0.17.1"

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
opt-level = "z"
lto = true
